--- a/task.css
+++ b/task.css
@@ -4,22 +4,31 @@
 body{
     margin: 0px;
     padding: 0px;
+    position: relative;
+    height: 100vh;
+    width: 100vw;
 }
 
 .container{
     background-image: url(./books.jpg);
-    height: 600px;
+    height: 100%;
+    width: 100%;
     background-position: center;
     background-size: cover;
+filter: blur(3px);
+    position: absolute;
+    top: 0px;
     
 }
 .main{
-    box-shadow: 1px 1px 10px black;
+    box-shadow: 1px 1px 10px rgb(255, 255, 255);
     height: 500px;
     width: 28%;
     margin: 0px auto;
     position: relative;
     top: 10%;
+    z-index: 1;
+    background-color: rgba(255, 255, 255,.1);
 
 }
 .one{
