--- a/task.css
+++ b/task.css
@@ -21,7 +21,7 @@ filter: blur(3px);
     
 }
 .main{
-    box-shadow: 1px 1px 10px rgb(255, 255, 255);
+    box-shadow: 1px 1px 10px transparent;
     height: 500px;
     width: 28%;
     margin: 0px auto;
